# hermes

./: .gitignore  .gitmodules  CAPABILITIES.md  OPENSOURCEWARE_250.md  PR_BODY.md  PR_DESCRIPTION.md  SPEC.md  agentic-grid.html  agentic.xtml  fleet_registry.json  gen_agentic_grid.py  gen_agentic_xtml.py  glocal-monorepo.json  ledger.bæsic  monorepo-manifest.json  neuromitosis.com.html  package.json  qc64_basic.py  serve_neuromitosis.py  toolsets.py
blueprints/: ae-ffmpeg-omniverse-live.md  breakout-001-250-baseline.md  breakout-002-vscode-codemode.md  computer-as-dao-incubator.md  computer-use-for-business.md  domain-stack.json  hermes-robot-context.md  hermes-robot.md  hermes-viewport-computer.md  kaizen-glocal-ml-computer-hermes.md  laptop-as-dao.md  neuroplasticity-in-mech-lang.md  omniverse-250000-simulator.md  plus-æ-ffmpeg-omniverse-protocol.md  plus-æ-ffmpeg-protocol.md  plus-æ-glocal-omniverse-surface.md  plus-æ-governance-economics-protocol.md  plus-æ-vlc-protocol.md  reachy-daollc-operator-protocol.md  reachy-software-factory.md  slash-learn-command-protocol.md  smarter-smart-contracts-dao-blocks.md
contest-submission/: ATTESTATION.md
dao/: charter.md  members.json
docs/: glocal-monorepo.md  local-hermes-mandate.md  local-vitals-cron.md  vscode-installer-research.md
environments/: gpu_mcp.py  rust_wasm_tools.py  test_gpu_mcp.py  test_rust_wasm.py
gateway/: status.py
hermes_cli/: conductor.py  dao.py  gateway.py  (+4 more)
pkg/pcmesh/: LICENSE  OPENSOURCEWARE_BOUNDARY.md  pyproject.toml
pkg/pcmesh/src/pcmesh/: __init__.py
pkg/pcmesh/tests/: test_pcmesh.py
(+93 files in other folders)
